Announcement ve news letter(abone olma) yapıldı

--- a/TraversalProject/Areas/Admin/Views/Announcement/AddAnnouncement.cshtml
+++ b/TraversalProject/Areas/Admin/Views/Announcement/AddAnnouncement.cshtml
@@ -13,7 +13,7 @@
     <br />
 
     <label>Duyuru İçeriği</label>
-    <input type="text" asp-for="Content" class="form-control" />
+    <textarea type="text" asp-for="Content" class="form-control" rows="10" ></textarea>
     <span asp-validation-for="Content" class="text-danger"></span>
     <br />
     <button class="btn btn-outline-primary">Duyuruyu Oluştur</button>
