--- a/TraversalProject/Views/Admin/PartialSidebar.cshtml
+++ b/TraversalProject/Views/Admin/PartialSidebar.cshtml
@@ -6,19 +6,19 @@
             <div data-i18n="Analytics">Dashboard</div>
         </a>
     </li>
-     <li class="menu-item">
+    <li class="menu-item">
         <a href="/Admin/Profile/Index" class="menu-link">
             <i class="menu-icon tf-icons bx bxs-edit"></i>
             <div data-i18n="Analytics">Profil Ayarları</div>
         </a>
     </li>
-     <li class="menu-item">
+    <li class="menu-item">
         <a href="/Admin/Comment/Index" class="menu-link">
             <i class="menu-icon tf-icons bx bx-comment"></i>
             <div data-i18n="Analytics">Yorumlar</div>
         </a>
     </li>
-     <li class="menu-item">
+    <li class="menu-item">
         <a href="/Admin/Destination/Index" class="menu-link">
             <i class="menu-icon tf-icons bx bx-car"></i>
             <div data-i18n="Analytics">Rotalar</div>
@@ -55,6 +55,18 @@
         </a>
     </li>
     <li class="menu-item">
+        <a href="/Admin/Announcement/Index" class="menu-link">
+            <i class="menu-icon tf-icons bx bx-notification"></i>
+            <div data-i18n="Analytics">Duyurular</div>
+        </a>
+    </li>
+    <li class="menu-item">
+        <a href="/Admin/Newsletter/Index" class="menu-link">
+            <i class="menu-icon tf-icons bx bx-envelope"></i>
+            <div data-i18n="Analytics">Abone Olanlar</div>
+        </a>
+    </li>
+    <li class="menu-item">
         <a href="/Admin/Mail/Index/" class="menu-link">
             <i class="menu-icon tf-icons bx bx-mail-send"></i>
             <div data-i18n="Analytics">Mail Gönder</div>
@@ -79,36 +91,31 @@
             <div data-i18n="Analytics">AJAX işlemleri</div>
         </a>
     </li>
-     <li class="menu-item">
-        <a href="/Admin/Announcement/Index" class="menu-link">
-            <i class="menu-icon tf-icons bx bx-notification"></i>
-            <div data-i18n="Analytics">Duyurular</div>
-        </a>
-    </li>
+
     <li class="menu-item">
         <a href="index.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-abacus"></i>
             <div data-i18n="Analytics">Alt Hakkında</div>
         </a>
     </li>
-@*    <li class="menu-item">
-        <a href="index.html" class="menu-link">
-            <i class="menu-icon tf-icons bx bx-ghost"></i>
-            <div data-i18n="Analytics">Öne Çıkanlar</div>
-        </a>
+    @*    <li class="menu-item">
+    <a href="index.html" class="menu-link">
+    <i class="menu-icon tf-icons bx bx-ghost"></i>
+    <div data-i18n="Analytics">Öne Çıkanlar</div>
+    </a>
     </li>
     <li class="menu-item">
-        <a href="index.html" class="menu-link">
-            <i class="menu-icon tf-icons bx bx-navigation"></i>
-            <div data-i18n="Analytics">Referanslar</div>
-        </a>
+    <a href="index.html" class="menu-link">
+    <i class="menu-icon tf-icons bx bx-navigation"></i>
+    <div data-i18n="Analytics">Referanslar</div>
+    </a>
     </li>*@
 
-@*    <li class="menu-item">
-        <a href="index.html" class="menu-link">
-            <i class="menu-icon tf-icons bx bx-bookmark-alt"></i>
-            <div data-i18n="Analytics">Öne Çıkanlar 2</div>
-        </a>
+    @*    <li class="menu-item">
+    <a href="index.html" class="menu-link">
+    <i class="menu-icon tf-icons bx bx-bookmark-alt"></i>
+    <div data-i18n="Analytics">Öne Çıkanlar 2</div>
+    </a>
     </li>*@
 
     <li class="menu-item">
