--- a/TraversalProject/Views/LayoutPartial/_FooterPartial.cshtml
+++ b/TraversalProject/Views/LayoutPartial/_FooterPartial.cshtml
@@ -38,17 +38,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
-                        <h3>Mail Bülteni </h3>
-                        <div class="end-column">
-                            <h4>Kampanya ve indirimler için abone olun.</h4>
-                            <form action="#" class="subscribe" method="post">
-                                <input type="email" name="email" placeholder="Mail Adresiniz" required="">
-                                <button type="submit">Abone Ol</button>
-                            </form>
-                            <p>Yeni tur rotalarını paylaşacağız. Spam mail göndermiyoruz.</p>
-                        </div>
-                    </div>
+                    @await Html.PartialAsync("/Views/Newsletter/Newsletter.cshtml")
                 </div>
                 <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
                     <div class="columns text-lg-left text-center">
