--- a/TraversalProject/Areas/Admin/Views/Announcement/Index.cshtml
+++ b/TraversalProject/Areas/Admin/Views/Announcement/Index.cshtml
@@ -11,7 +11,6 @@
     <tr>
         <th>#</th>
         <th>Başlık</th>
-        <th>İçerik</th>
         <th>Sil</th>
         <th>Güncelle</th>
         <th>Detaylar</th>
@@ -24,10 +23,9 @@
             }
             <td>@count</td>
             <td>@item.Title</td>
-            <td>@item.Content</td>
             <td><a href="/Admin/Announcement/DeleteAnnouncement/@item.AnnouncementID" class="btn btn-outline-danger">Sil</a></td>
             <td><a href="/Admin/Announcement/UpdateAnnouncement/@item.AnnouncementID" class="btn btn-outline-success">Güncelle</a></td>
-            <td><a href="#" class="btn btn-outline-dark">Detaylar</a></td>
+            <td><a href="/Admin/Announcement/Details/@item.AnnouncementID" class="btn btn-outline-dark">Detaylar</a></td>
         </tr>
     }
 </table>
