--- a/TraversalProject/Views/Destination/DestinationDetails.cshtml
+++ b/TraversalProject/Views/Destination/DestinationDetails.cshtml
@@ -41,13 +41,18 @@
                         </li>
                     </ul>
                 </div>
+              
             </div>
         </div>
+        <br /><br />
+        <h3>@Model.City.ToUpper() TURU</h3>
     </div>
     <section class="blog-post-main w3l-homeblock1">
         <!--/blog-post-->
+
         <div class="blog-content-inf pb-5">
             <div class="container pb-lg-4">
+
                 <div class="single-post-image">
                     <div class="post-content">
                         <img src="@Model.CoverImage" style="width:1170px; height:500px;" class="radius-image img-fluid mb-5" alt="" />
