Member ve Admin dashbaord'da düzenleme yapıldı

--- a/TraversalProject/Views/Shared/Components/_Cards2Statistics/Default.cshtml
+++ b/TraversalProject/Views/Shared/Components/_Cards2Statistics/Default.cshtml
@@ -8,8 +8,8 @@
                             <img src="~/sneat-1.0.0/assets/img/icons/unicons/paypal.png" alt="Credit Card" class="rounded" />
                         </div>
                     </div>
-                    <span class="d-block mb-1">Ağustos</span>
-                    <h3 class="card-title text-nowrap mb-2">₺18.950</h3>
+                    <span class="d-block mb-1">Yorum Sayısı</span>
+                    <h3 class="card-title text-nowrap mb-2">@ViewBag.totalComment</h3>
                     <small class="text-danger fw-semibold"><i class="bx bx-down-arrow-alt"></i> -14.82%</small>
                 </div>
             </div>
@@ -22,8 +22,8 @@
                             <img src="~/sneat-1.0.0/assets/img/icons/unicons/cc-primary.png" alt="Credit Card" class="rounded" />
                         </div>
                     </div>
-                    <span class="fw-semibold d-block mb-1">Eylül</span>
-                    <h4 class="card-title mb-2">₺28.652</h4>
+                    <span class="fw-semibold d-block mb-1">Mesaj Sayısı</span>
+                    <h4 class="card-title mb-2">@ViewBag.totalMessages</h4>
                     <small class="text-success fw-semibold"><i class="bx bx-up-arrow-alt"></i> +28.14%</small>
                 </div>
             </div>
@@ -37,7 +37,7 @@
                         <div class="d-flex flex-sm-column flex-row align-items-start justify-content-between">
                             <div class="card-title">
                                 <h5 class="text-nowrap mb-2">Profil Raporu</h5>
-                                <span class="badge bg-label-warning rounded-pill">2022 Yılı Kazancı</span>
+                                <span class="badge bg-label-warning rounded-pill">2023 Yılı Kazancı</span>
                             </div>
                             <div class="mt-sm-auto">
                                 <small class="text-success text-nowrap fw-semibold"><i class="bx bx-chevron-up"></i> 68.2%</small>
