--- a/TraversalProject/Views/Shared/Components/_DashboardBanner/Default.cshtml
+++ b/TraversalProject/Views/Shared/Components/_DashboardBanner/Default.cshtml
@@ -5,7 +5,8 @@
                 <div class="card-body">
                     <h5 class="card-title text-primary">Tebrikler Admin! 🎉</h5>
                     <p class="mb-4">
-                        Toplam abone sayınız: <span class="fw-bold">26.955</span> Son 30 günde sisteminize 824 yeni misafir abone oldu.
+                        Toplam abone sayınız: <span class="fw-bold">@ViewBag.totalSubscribe</span>
+                        <br />Sisteminize toplam @ViewBag.totalMembers kişi üye oldu.
                     </p>
 
                     <a href="/Default/Index/" class="btn btn-sm btn-outline-primary">Siteye Git</a>
