--- a/TraversalProject/Views/Shared/Components/_GuideList/Default.cshtml
+++ b/TraversalProject/Views/Shared/Components/_GuideList/Default.cshtml
@@ -3,7 +3,7 @@
 <div class="col-xl-4 col-lg-12">
     <div class="card">
         <div class="card-header">
-            <h4 class="card-title">Rehberlerimiz</h4>
+            <h4 class="card-title">Bazı Rehberlerimiz</h4>
             <a class="heading-elements-toggle">
                 <i class="fa fa-ellipsis-v font-medium-3"></i>
             </a>
