--- a/TraversalProject/Views/Shared/Components/_MemberLayoutNavbar/Default.cshtml
+++ b/TraversalProject/Views/Shared/Components/_MemberLayoutNavbar/Default.cshtml
@@ -43,6 +43,7 @@
                 <a class="dropdown-item" href="/Member/Profile/Index/">
                     <i class="ft-user"></i> Profili Düzenle
                 </a>
+                <a class="dropdown-item" href="/Member/Notification/Index/"><i class="ft-bell"></i> Bildirimler</a>
                 <a class="dropdown-item" href="/Member/Reservation/MyCurrentReservation/"><i class="ft-check-square"></i> Aktif Rezervasyonlarım</a>
                 <a class="dropdown-item" href="/Member/Reservation/MyOldReservation/"><i class="ft-download"></i> Geçmiş Rezervasyonlar</a>
                 <a class="dropdown-item" href="/Member/Reservation/MyApprovalReservation/"><i class="ft-clock"></i> Onay  Bekleyenler</a>
