--- a/TraversalProject/Views/Shared/Components/_MemberStatistic/Default.cshtml
+++ b/TraversalProject/Views/Shared/Components/_MemberStatistic/Default.cshtml
@@ -12,14 +12,15 @@
                     Aşağıda sizin ve acentamızın bazı istatistik bilgileri yer almaktadır. 
                     Bu istatistiklerin sizlerle beraber artmasını temenni ediyoruz. 
                     Gezi dolu daha nice günde buluşmak dileğiyle.</p>
-                <h4 class="card-title">........</h4>
-                <h6>Aktif Rezervasyon Sayınız: 4</h6>
-                <h6>Geçmiş Rezervasyon Sayınız: 12</h6>
-                <h6>Onay Bekleyen Rezervasyon Sayınız: 1</h6>
-                <h6>Toplam Rota Sayısı: 16</h6>
-                <h6>Rehber Sayımız: 6</h6>
-                <h6>Toplam Misafir Sayımız: 1286</h6>
-                <h6>Ortalama Puanımız: 8.97/10</h6>
+                <h4 class="card-title"><hr /></h4>
+                <h6>Aktif Rezervasyon Sayınız: @ViewBag.aktifRezv</h6>
+                <h6>Geçmiş Rezervasyon Sayınız: @ViewBag.geçmişRezv</h6>
+                <h6>Onay Bekleyen Rezervasyon Sayınız: @ViewBag.onayBekleyenRezv</h6>
+                <h6>Toplam Yorum Sayınız: @ViewBag.totalComment</h6>
+                <h6>Toplam Bildirim Sayınız: @ViewBag.notificationComment</h6>
+                <h6>Toplam Rota Sayısı: @ViewBag.totalTour</h6>
+                <h6>Rehber Sayımız: @ViewBag.totalGuide</h6>
+                <h6>Toplam Misafir Sayımız: @ViewBag.totalMember</h6>
             </div>
         </div>
     </div>
