--- a/TraversalProject/Areas/Member/Views/Dashboard/MemberDashboard.cshtml
+++ b/TraversalProject/Areas/Member/Views/Dashboard/MemberDashboard.cshtml
@@ -72,17 +72,17 @@
                     <a href="/Member/Profile/Index/"><i class="ft-pie-chart"></i><span class="menu-title" data-i18n="">@localizer["Profilim"]</span></a>
                 </li>
                 <li class=" nav-item">
-                    <a href="/Member/Reservation/MyCurrentReservation/"><i class="ft-droplet"></i><span class="menu-title" data-i18n="">@localizer["Aktif Rezv."]</span></a>
+                    <a href="/Member/Reservation/NewReservation/"><i class="ft-navigation"></i><span class="menu-title" data-i18n="">@localizer["Yeni Rezervasyon"]</span></a>
                 </li>
                 <li class=" nav-item">
-                    <a href="/Member/Reservation/MyOldReservation/"><i class="ft-clock"></i><span class="menu-title" data-i18n="">@localizer["Geçmiş Rezv."]</span></a>
+                    <a href="/Member/Reservation/MyCurrentReservation/"><i class="ft-droplet"></i><span class="menu-title" data-i18n="">@localizer["Aktif Rezv."]</span></a>
                 </li>
                 <li class="nav-item">
                     <a href="/Member/Reservation/MyApprovalReservation/"><i class="ft-cloud"></i><span class="menu-title" data-i18n="">@localizer["Onay Bekleyen Rezv."]</span></a>
                 </li>
                 <li class=" nav-item">
-                    <a href="/Member/Reservation/NewReservation/"><i class="ft-navigation"></i><span class="menu-title" data-i18n="">@localizer["Yeni Rezervasyon"]</span></a>
-                </li>
+                    <a href="/Member/Reservation/MyOldReservation/"><i class="ft-clock"></i><span class="menu-title" data-i18n="">@localizer["Geçmiş Rezv."]</span></a>
+                </li>   
                 <li class=" nav-item">
                     <a href="/Member/Comment/Index/"><i class="ft-command"></i><span class="menu-title" data-i18n="">@localizer["Yorumlarım"]</span></a>
                 </li>
@@ -96,7 +96,7 @@
                     <a href="/Default/Index/"><i class="ft-power"></i><span class="menu-title" data-i18n="">@localizer["Siteye Git"]</span></a>
                 </li>
                 <li class=" nav-item">
-                    <a href="#"><i class="ft-lock"></i><span class="menu-title" data-i18n="">@localizer["Çıkış Yap"]</span></a>
+                    <a href="/Login/LogOut/"><i class="ft-lock"></i><span class="menu-title" data-i18n="">@localizer["Çıkış Yap"]</span></a>
                 </li>
             </ul>
         </div>
@@ -167,56 +167,11 @@
                 <!-- Statistics -->
                 <div class="row match-height">
                     @await Component.InvokeAsync("_MemberStatistic")
-                    <div class="col-xl-4 col-lg-12">
-                        <div class="card">
-                            <div class="card-content">
-                                <div class="card-body">
-                                    <h4 class="card-title">Recent products</h4>
-                                    <h6 class="card-subtitle text-muted">Carousel Card With Header & Footer</h6>
-                                </div>
-                                <div id="carousel-area" class="carousel slide" data-ride="carousel">
-                                    <ol class="carousel-indicators">
-                                        <li data-target="#carousel-area" data-slide-to="0" class="active"></li>
-                                        <li data-target="#carousel-area" data-slide-to="1"></li>
-                                        <li data-target="#carousel-area" data-slide-to="2"></li>
-                                    </ol>
-                                    <div class="carousel-inner" role="listbox">
-                                        <div class="carousel-item active">
-                                            <img src="~/member/theme-assets/images/carousel/08.jpg" class="d-block w-100" alt="First slide">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="~/member/theme-assets/images/carousel/03.jpg" class="d-block w-100" alt="Second slide">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="~/member/theme-assets/images/carousel/01.jpg" class="d-block w-100" alt="Third slide">
-                                        </div>
-                                    </div>
-                                    <a class="carousel-control-prev" href="#carousel-area" role="button" data-slide="prev">
-                                        <span class="la la-angle-left" aria-hidden="true"></span>
-                                        <span class="sr-only">Previous</span>
-                                    </a>
-                                    <a class="carousel-control-next" href="#carousel-area" role="button" data-slide="next">
-                                        <span class="la la-angle-right icon-next" aria-hidden="true"></span>
-                                        <span class="sr-only">Next</span>
-                                    </a>
-                                </div>
-                                <div class="card-body">
-                                    <a href="#" class="card-link">Card link</a>
-                                    <a href="#" class="card-link">Another link</a>
-                                </div>
-                            </div>
-                            <div class="card-footer border-top-blue-grey border-top-lighten-5 text-muted">
-                                <span class="float-left">2 days ago</span>
-                                <span class="tags float-right">
-                                    <span class="badge badge-pill badge-primary">Branding</span>
-                                    <span class="badge badge-pill badge-danger">Design</span>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
+
+                    @await Component.InvokeAsync("_MemberStatistic2")
+                   
                     @await Component.InvokeAsync("_GuideList")
 
-                    @await Component.InvokeAsync("_LastDestinations")
                 </div>
                 <!--/ Statistics -->
             </div>
