Hakkımızda sayfası yapıldı

--- a/TraversalProject/Areas/Admin/Views/Destination/Index.cshtml
+++ b/TraversalProject/Areas/Admin/Views/Destination/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>Tur Rotaları</h1>
-<table class="table table-bordered table-hover">
+<table class="table table-striped table-hover">
     <tr>
         <th hidden>#</th>
         <th>Şehir</th>
