--- a/TraversalProject/Views/Admin/PartialSidebar.cshtml
+++ b/TraversalProject/Views/Admin/PartialSidebar.cshtml
@@ -61,6 +61,12 @@
         </a>
     </li>
     <li class="menu-item">
+        <a href="/Admin/About/Index" class="menu-link">
+            <i class="menu-icon tf-icons bx bx-album"></i>
+            <div data-i18n="Analytics">Hakkımızda</div>
+        </a>
+    </li>
+    <li class="menu-item">
         <a href="/Admin/Newsletter/Index" class="menu-link">
             <i class="menu-icon tf-icons bx bx-envelope"></i>
             <div data-i18n="Analytics">Abone Olanlar</div>
