--- a/TraversalProject/Views/LayoutPartial/_NavbarPartial.cshtml
+++ b/TraversalProject/Views/LayoutPartial/_NavbarPartial.cshtml
@@ -23,7 +23,7 @@
                         <a class="nav-link" href="/Default/Index/">Ana Sayfa <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Hakkımızda</a>
+                        <a class="nav-link" href="/About/Index/">Hakkımızda</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/Destination/Index/">Tur Rotaları</a>
