--- a/TraversalProject/Views/Shared/Components/_Feature/Default.cshtml
+++ b/TraversalProject/Views/Shared/Components/_Feature/Default.cshtml
@@ -1,14 +1,16 @@
-﻿﻿<div class="best-rooms py-5">
+﻿@model List<Destination>
+
+<div class="best-rooms py-5">
     <div class="container py-md-5">
         <div class="ban-content-inf row">
             <div class="maghny-gd-1 col-lg-6">
                 <div class="maghny-grid">
                     <figure class="effect-lily border-radius  m-0">
-                        <img class="img-fluid" src="~/Traversal-Liberty/assets/images/g10.jpg" alt="" />
+                        <img class="img-fluid" src="@ViewBag.image" style="height:621px; width:560px;" alt="" />
                         <figcaption>
                             <div>
-                                <h4>3 Gece, 4 Gün Sonbahar Karadeniz Turu</h4>
-                                <p>2850₺'den başlayan fiyatlar</p>
+                                <h4>@ViewBag.daynight - @ViewBag.city</h4>
+                                <p>@ViewBag.price ₺'den başlayan fiyatlar</p>
                             </div>
 
                         </figcaption>
@@ -17,62 +19,23 @@
             </div>
             <div class="maghny-gd-1 col-lg-6 mt-lg-0 mt-4">
                 <div class="row">
-                    <div class="maghny-gd-1 col-6">
-                        <div class="maghny-grid">
-                            <figure class="effect-lily border-radius">
-                                <img class="img-fluid" src="~/Traversal-Liberty/assets/images/g9.jpg" alt="" />
-                                <figcaption>
-                                    <div>
-                                        <h4>3 Gece, 4 Gün Mısır Turu</h4>
-                                        <p>1500₺'den başlayan fiyatlar</p>
-                                    </div>
+                    @foreach(var item in Model)
+                    {
+                        <div class="maghny-gd-1 col-6 mb-4">
+                            <div class="maghny-grid">
+                                <figure class="effect-lily border-radius">
+                                    <img class="img-fluid" src="@item.CoverImage" style="height:298px; width:265px;" alt="" />
+                                    <figcaption>
+                                        <div>
+                                            <h4>@item.DayNight - @item.City </h4>
+                                            <p>@item.Price ₺'den başlayan fiyatlar</p>
+                                        </div>
 
-                                </figcaption>
-                            </figure>
+                                    </figcaption>
+                                </figure>
+                            </div>
                         </div>
-                    </div>
-                    <div class="maghny-gd-1 col-6">
-                        <div class="maghny-grid">
-                            <figure class="effect-lily border-radius">
-                                <img class="img-fluid" src="~/Traversal-Liberty/assets/images/g8.jpg" alt="" />
-                                <figcaption>
-                                    <div>
-                                        <h4>2 Gece, 3 Gün Roma Turu</h4>
-                                        <p>675$'dan başlayan fiyatlar</p>
-                                    </div>
-
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </div>
-                    <div class="maghny-gd-1 col-6 mt-4">
-                        <div class="maghny-grid">
-                            <figure class="effect-lily border-radius">
-                                <img class="img-fluid" src="~/Traversal-Liberty/assets/images/g7.jpg" alt="" />
-                                <figcaption>
-                                    <div>
-                                        <h4>5 Gece 6 Gün Maldivler</h4>
-                                        <p>12.000₺'den başlayan fiyatlar</p>
-                                    </div>
-
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </div>
-                    <div class="maghny-gd-1 col-6 mt-4">
-                        <div class="maghny-grid">
-                            <figure class="effect-lily border-radius">
-                                <img class="img-fluid" src="~/Traversal-Liberty/assets/images/g6.jpg" alt="" />
-                                <figcaption>
-                                    <div>
-                                        <h4>4 Gece 5 Gün İsviçre Turu</h4>
-                                        <p>1280€'dan başlayan fiyatlar</p>
-                                    </div>
-
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </div>
+                    }
                 </div>
             </div>
         </div>
