Admin sayfasında arama işlemi

--- a/TraversalProject/Views/Shared/Components/_AdminNavbar/Default.cshtml
+++ b/TraversalProject/Views/Shared/Components/_AdminNavbar/Default.cshtml
@@ -8,15 +8,17 @@
 
     <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
         <!-- Search -->
-        <div class="navbar-nav align-items-center">
-            <div class="nav-item d-flex align-items-center">
-                <i class="bx bx-search fs-4 lh-0"></i>
-                <input type="text"
-                       class="form-control border-0 shadow-none"
-                       placeholder="Aranacak kelimeyi giriniz..."
-                       aria-label="Search..." />
+        <form action="@Url.Action("Arama","Dashboard","Admin")" method="get">
+            <div class="navbar-nav align-items-center">
+                <div class="nav-item d-flex align-items-center">
+                    <i class="bx bx-search fs-4 lh-0"></i>
+                    <input name="p" type="text"
+                           class="form-control border-0 shadow-none"
+                           placeholder="Aranacak kelimeyi giriniz..."
+                           aria-label="Search..." />
+                </div>
             </div>
-        </div>
+        </form>
         <!-- /Search -->
 
         <ul class="navbar-nav flex-row align-items-center ms-auto">
