--- a/TraversalProject/Views/Admin/PartialSidebar.cshtml
+++ b/TraversalProject/Views/Admin/PartialSidebar.cshtml
@@ -80,7 +80,7 @@
     </li>
     <li class="menu-item">
         <a href="/PdfReport/Index/" class="menu-link">
-            <i class="menu-icon tf-icons bx bxs-report"></i>
+            <i class="menu-icon tf-icons bx bxs-file-pdf"></i>
             <div data-i18n="Analytics">Pdf Raporları</div>
         </a>
     </li>
@@ -95,6 +95,24 @@
         <a href="/Admin/City/Index/" class="menu-link">
             <i class="menu-icon tf-icons bx bxs-star"></i>
             <div data-i18n="Analytics">AJAX işlemleri</div>
+        </a>
+    </li>
+    <li class="menu-item">
+        <a href="/Admin/ApiExchange/Index/" class="menu-link">
+            <i class="menu-icon tf-icons bx bx-money"></i>
+            <div data-i18n="Analytics">API Exchange</div>
+        </a>
+    </li>
+    <li class="menu-item">
+        <a href="/Admin/ApiMovie/Index/" class="menu-link">
+            <i class="menu-icon tf-icons bx bxs-movie"></i>
+            <div data-i18n="Analytics">API Film</div>
+        </a>
+    </li>
+    <li class="menu-item">
+        <a href="/Admin/BookingHotelSearch/Index/" class="menu-link">
+            <i class="menu-icon tf-icons bx bxs-hotel"></i>
+            <div data-i18n="Analytics">API B. Hotel Search</div>
         </a>
     </li>
     <li class="menu-item">
